# Normalized

./: .env.example  .gitignore  CHANGELOG.md  CLI_INTERACTIVE_GUIDE.md  CONTRIBUTING.md  DATABASE_IMPORT_GUIDE.md  LICENSE  PRACTICAL_EXAMPLES.md  PROJECT_SUMMARY.md  README.md  cli_interactive.py  csv_to_sql.py  example.py  main.py  pyproject.toml  requirements.txt  sql_repair_fixed.py  test_copy_demo.py  test_header_detection.py  test_linkedin_extraction.py  test_name_sanitization.py  test_null_values.py  test_sqlite.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: README.md  __init__.py
