[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-to-sql-converter"
version = "1.0.0"
description = "Efficient CSV to SQL converter for large files"
authors = [
    {name = "Tu Nombre", email = "tu.email@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["csv", "sql", "converter", "database", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "inquirer>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/csv-to-sql-converter"
Repository = "https://github.com/tu-usuario/csv-to-sql-converter"
Issues = "https://github.com/tu-usuario/csv-to-sql-converter/issues"

[project.scripts]
csv-to-sql = "csv_to_sql:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csv_to_sql*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true